25 Aug 2018 Made the NetworkAdapter.Disable and NetworkAdapter.Enable methods work and added more unit tests

--- a/adapman.Tests/adapman.Tests.csproj
+++ b/adapman.Tests/adapman.Tests.csproj
@@ -73,7 +73,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandLineInfoTests.cs" />
+    <Compile Include="NetworkAdapterManagerTests.cs" />
+    <Compile Include="NetworkAdapterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WifiManagerTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
