--- a/adapman/adapman.csproj
+++ b/adapman/adapman.csproj
@@ -71,6 +71,7 @@
     <Compile Include="CommandLineAction.cs" />
     <Compile Include="CommandLineInfo.cs" />
     <Compile Include="CommandLineValidator.cs" />
+    <Compile Include="ExceptionHelpers.cs" />
     <Compile Include="NetworkAdapter.cs" />
     <Compile Include="NetworkAdapterManager.cs" />
     <Compile Include="Program.cs" />
