--- a/adapman/adapman.csproj
+++ b/adapman/adapman.csproj
@@ -81,6 +81,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="WifiManager.cs" />
   </ItemGroup>
   <ItemGroup>
