5 Sep 2018 Added a DataHelpers class to provide a robust, fault-tolerant method for reading values from a ManagementObject and made the NetworkAdapterManager.GetAdapters method more debugger-friendly

--- a/adapman/adapman.csproj
+++ b/adapman/adapman.csproj
@@ -71,6 +71,7 @@
     <Compile Include="CommandLineAction.cs" />
     <Compile Include="CommandLineInfo.cs" />
     <Compile Include="CommandLineValidator.cs" />
+    <Compile Include="DataHelpers.cs" />
     <Compile Include="ExceptionHelpers.cs" />
     <Compile Include="NetworkAdapter.cs" />
     <Compile Include="NetworkAdapterManager.cs" />
